deploy/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: seif
  labels:
    app.kubernetes.io/part-of: seif
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
